--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="icons/codecommit.jpg" alt="Boss" style="width:45%" class="w3-hide-small w3-hover-opacity">
+  <img src="codecommit.jpg" alt="Boss" style="width:45%" class="w3-hide-small w3-hover-opacity">
   <h3>Code Commit</h3>
   <p></p>
 </div>
 
 <div class="w3-quarter">
-  <img src="icons/build.jpg" alt="Boss" style="width:45%" class="w3-hide-small w3-hover-opacity">
+  <img src="build.jpg" alt="Boss" style="width:45%" class="w3-hide-small w3-hover-opacity">
   <h3>Code Build</h3>
   <p></p>
 </div>
 
 <div class="w3-quarter">
-  <img src="icons/Deploy.jpg" alt="Boss" style="width:45%" class="w3-hide-small w3-hover-opacity">
+  <img src="Deploy.jpg" alt="Boss" style="width:45%" class="w3-hide-small w3-hover-opacity">
   <h3>Code Deploy</h3>
   <p></p>
 </div>
 
 <div class="w3-quarter">
-  <img src="icons/Pipeline.jpg" alt="Boss" style="width:45%" class="w3-square w3-hover-opacity">
+  <img src="Pipeline.jpg" alt="Boss" style="width:45%" class="w3-square w3-hover-opacity">
   <h3>Code Pipeline</h3>
   <p></p>
 </div>
@@ -92,7 +92,7 @@
 
 <div class="w3-modal-content">
 <div class="w3-card w3-white">
-  <img  src="icons/flow.jpg" alt="centered image" style="width: 90%; height: 400px"; >
+  <img  src="flow.jpg" alt="centered image" style="width: 90%; height: 400px"; >
  
   </div>
 </div>
